#5402 Removed the runtime option le_sparse_jacobian_threshold and changed into a compiler option where a threshold detrmines if the sparse or dense Jacobian should be generated, not both.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Change ; Minor ; Compiler, runtime ; #5402
+Generation of sparse Jacobian for linear systems is now controlled by a
+threshold and either the dense Jacobian is generated or the sparse, not both. 
+
 ; Bugfix ; Minor ; Compiler ; #5394
 Fixed compiler crash when using function with several outputs where one is 
 a zero-size array.
