#5402 Removed the runtime option le_sparse_jacobian_threshold and changed into a compiler option where a threshold detrmines if the sparse or dense Jacobian should be generated, not both. Recommit after bugfix in r9983.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Change ; Minor ; Compiler, Runtime ; #5402
+Generation of sparse Jacobian for linear systems is now controlled by a
+threshold and either the dense Jacobian is generated or the sparse, not both. 
+
 ; Change ; Minor ; Runtime ; #5401
 Added defines to handle missing CLOCKS_PER_SEC
 
