--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Changed ; Minor ; Compiler ; #5430
+Added option removers to the option registry. Also added a test case for options.
+
 ; Other ; Minor ; Compiler ; #5417 #5420
 Improved compiler performance in general. In some cases up to -10% compilation time and -20% memory peak when compiling
 
