Updated changelog after changeset:10110. Related to ticket:5455

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Python ; #5455
+Fixed build system to handle 64bit FMIL builds correctly.
+
 ; Fixed ; Minor ; Python ; #5454
 Fixed build system to handle 64bit SuperLU builds correctly.
 
@@ -12,7 +15,6 @@ The temporary directory is always deleted, regardless of whether compilation fai
 
 ; Changed ; Minor ; Compiler ; #5430
 Added option removers to the option registry. Also added a test case for options.
-
 
 ================= Stable-2017-08-09 ==================
 ; Fixed ; Minor ; Compiler ; #5416
@@ -61,6 +63,5 @@ generated for each event indicator.
 
 ; Other ; Minor ; General ; #5393
 Added a changelog to JModelica.org.
-
 
 ==================== JM 2.0 ===================
