--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Compiler ; #5219
+Fixed bug in BLT computation for initial system where start value of variables
+could depend on variables which were computed after the variable it self.
+
 ; Fixed ; Minor ; Python ; #5455
 Fixed build system to handle 64bit FMIL builds correctly.
 
