--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -1,8 +1,14 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Compiler ; #5460
+Fixed bug where indices in for expressions got modifications intended for actual variables. 
+
 ; Fixed ; Major ; Build system ; #5459
 Added support for building Assimulo, PyFMI, PyJMI, pymodelica  in
 both 32 and 64 bit modes on windows when corresponding Python distributions
 are available.
+
+; Fixed ; Minor ; Compiler ; #5346
+Fixed code generation error for expanded expressions of arrays in record arrays
 
 ; Fixed ; Minor ; Compiler ; #5219
 Fixed bug in BLT computation for initial system where start value of variables
@@ -18,6 +24,8 @@ Fixed build system to handle 64bit SuperLU builds correctly.
 Added support for the sparse solver SuperLU when simulating FMI2 FMUs
 for ME.
 
+; Fixed ; Minor ; Compiler ; #5312
+Fixed branch selection when test expression was dependent on Evaluate=false.
 ================= Stable-2017-08-24 ==================
 ; Changed ; Minor ; Compiler ; #5214
 The temporary directory is always deleted, regardless of whether compilation fails or succeeds.
