Added information about limitations regarding Q-ident. Related to ticket:5466

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Documentation ; #5466
+Added information about limitation regarding Q-identifiers. 
+
 ; Fixed ; Minor ; Compiler ; #5460
 Fixed bug where indices in for expressions got modifications intended for actual variables. 
 
