--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Changed; Minor; Tests; #5459
+Updated tests_jmodelica FMUs to have 64 bit binaries as well.
+
 ; Fixed ; Minor ; Documentation ; #5466
 Added information about limitation regarding Q-identifiers. 
 
