#5459 Updated to correct Furuta model in fmu, updated to new model in Pendulum_0Dynamic.fmu and updated corresponding test cases. Also Malformed.fmu is updated to have 32 and 64 bit binaries.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,8 @@
 ================= Unreleased ==================
 ; Changed; Minor; Tests; #5459
+Updated more of tests_jmodelica FMUs to have 64 bit binaries as well.
+
+; Changed; Minor; Tests; #5459
 Updated tests_jmodelica FMUs to have 64 bit binaries as well.
 
 ; Fixed ; Minor ; Documentation ; #5466
