--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Change ; Minor ; Build system ; #5459
+Refactored configure.ac.
+
 ; Change ; Minor ; Examples ; #5459
 Updated furuta example asserts to correspond to updated FMU.
 
