--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,6 @@
 ================= Unreleased ==================
+; Feature ; Minor ; PyFMI ; #5470
+Added support to store result files on binary format.
 
 ================= Stable-2017-09-28 ==================
 ; Change ; Minor ; Build system ; #5459
