--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -1,4 +1,10 @@
 ================= Unreleased ==================
+; Feature ; Minor ; PyFMI ; #5475
+Added support for getting the declared type when using FMI2.
+
+; Fixed ; Minor ; PyFMI ; #5476
+Fixed issue with results for parameters when using memory storing option.
+
 ; Fixed ; Major ; Build system; #5459
 Added support for building CasADi in 32 and 64 bit modes
 in parallel when 64 bit Python and Ipopt available.
