--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -1,4 +1,6 @@
 ================= Unreleased ==================
+
+================= Stable-2017-10-18 ==================
 ; Change ; Major ; Compiler; #5468
 Removed CAD generation
 
