Added stable divider to CHANGELOG.txt

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,6 @@
 ================= Unreleased ==================
+
+================= Stable-2017-10-18 ==================
 ; Change ; Major ; Compiler; #5468
 Removed CAD generation
 
