Added common subexpression elimination of math operators. Related to ticket:5492

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Feature ; Minor ; Compiler ; #5492
+Added common subexpression elimination of builtin math operators.
+
 ; Feature ; Major ; Build system ; #5489
 Adding posibility to run Python tests in both 32 and 64 bit modes.
 
