#5489 Divided the test tags stddist, windows and casadi into stddist_base, stddist_full, windows_base, windows_full, casadi_base and casadi_full. The _base indicates tests that should run on both 32 and 64 bit platform whereas _full will only be run in one mode. Also the tests tagged with fmi are now tagged as stddist_base/full.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,11 @@
 ================= Unreleased ==================
+; Change ; Major ; TestsM #5489
+Divided the test tags stddist, windows and casadi into stddist_base,
+stddist_full, windows_base, windows_full, casadi_base and casadi_full. 
+The _base indicates tests that should run on both 32 and 64 bit platform 
+whereas _full will only be run in one mode. Also the tests tagged with fmi
+are now tagged as stddist_base/full. 
+
 ; Fixed ; Minor ; PyFMI ; #5494
 Fixed problem with binary files that includes spaces in the variable names.
 
