--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Compiler ; #5326
+Fixed bug where certain combinations of Integer and enumeration parameters 
+gave wrong values of those parameters reported from the FMU.
+
 ; Change ; Major ; TestsM #5489
 Divided the test tags stddist, windows and casadi into stddist_base,
 stddist_full, windows_base, windows_full, casadi_base and casadi_full. 
