#5497 Added option for disabling external evaluation during variability propagation

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,6 @@
 ================= Unreleased ==================
+; Change ; Minor ; Compiler ; #5497
+Added option for disabling external evaluation during variability propagation
 
 ================= Stable-2017-11-02 ==================
 ; Fixed ; Minor ; Compiler ; #5326
