#1003 catch up ^/dev/5174 with ^/trunk

--- a/branches/dev/5174/CHANGELOG.txt
+++ b/branches/dev/5174/CHANGELOG.txt
@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Change ; Minor ; Compiler ; #5497
+Added option for disabling external evaluation during variability propagation
+
+================= Stable-2017-11-02 ==================
 ; Fixed ; Minor ; Compiler ; #5326
 Fixed bug where certain combinations of Integer and enumeration parameters 
 gave wrong values of those parameters reported from the FMU.
