--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Compiler ; #5503
+Disabled automatic addition of derivatives for variables with state select set
+to prefer if index reduction is disabled.
+
 ; Change ; Minor ; Compiler ; #5497
 Added option for disabling external evaluation during variability propagation
 
