--- a/branches/dev/5174/CHANGELOG.txt
+++ b/branches/dev/5174/CHANGELOG.txt
@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Compiler ; #5514
+Fixed problem with temporary generation for for-loop ranges
+
+================= Stable-2017-11-29 ==================
 ; Change ; Minor ; Compiler ; #5513
 Changed code generation to use hard coded values in the z-vector for 
 performance.
