--- a/branches/dev-5527/CHANGELOG.txt
+++ b/branches/dev-5527/CHANGELOG.txt
@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Compiler ; #5527
+Fixed representation of size expressions in function call types
+
 ; Fixed ; Minor ; Compiler; #5526 
 Fixed null pointer in evaluation of partial function
 
