#4797 Fixing bug for assigning strings in records in functions. Added changelog entry. Updated limitations.

--- a/branches/dev-fullstringsupport/CHANGELOG.txt
+++ b/branches/dev-fullstringsupport/CHANGELOG.txt
@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Feature ; Major ; Compiler; #4797
+Full string support
+
 ; Fixed ; Minor ; compiler ; #5530
 Fixed crash bug in FMI XML generator where alias eliminated high order
 temporary derivatives which were orphan caused problems.
