#5579 Merged dev-premerge branch to trunk.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Compiler ; #5579 
+Improved handling of event generating relational expressions
+with nested blocks.
+
 ; Feature ; Minor ; Compiler ; #5584
 Added variable index comment before each variable in the FMI ModelVariables
 XML.
